--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 /* ===================== common css part start ======================== */
-*{
+* {
     margin: 0;
     padding: 0;
     outline: 0;
     box-sizing: border-box;
 }
-a{
+
+a {
     text-decoration: none;
     display: inline-block;
 }
-ul,li{
+
+ul,
+li {
     list-style: none;
 }
-img{
-    max-width:100%;
+
+img {
+    max-width: 100%;
     vertical-align: middle;
 }
 
-:root{
-    --font-ibm:"IBM Plex Sans", sans-serif;
+:root {
+    --font-ibm: "IBM Plex Sans", sans-serif;
 }
+
 /* ===================== common css part  end ======================== */
 /* ===================== navbar css part start ======================== */
-nav{
+nav {
     background: pink;
 }
-.btn a{
+
+.btn a {
     padding: 20px 51px;
     font-family: var(--font-ibm);
     font-size: 18px;
@@ -35,22 +42,97 @@ nav{
     background: #FF9600;
     border-radius: 10px;
 }
-.navbar_part{
+
+.navbar_part {
     display: flex;
-    justify-content: space-between ;
+    justify-content: space-between;
 }
+
 /* ===================== navbar css part  end ======================== */
 /* ===================== banner css part start ======================== */
-#banner_part_start{
+#banner_part_start {
     background-image: url(../images/banner.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-  
+
 }
+
 /* ===================== banner css part  end ======================== */
 /* ===================== common css part start ======================== */
+
+.card_one {
+    width: 424px;
+    height: 438px;
+    text-align: center;
+
+
+}
+
+.img_part {
+    position: relative;
+    position: relative;
+
+}
+
+
+.text_part_start h3 {
+    font-weight: bold;
+    font-size: 30px;
+    color: #FF9600;
+    margin-top: 36px;
+    margin-bottom: 16px;
+}
+
+.text_part_start p {
+    font-size: 18px;
+    font-weight: 400;
+    color: #FFFFFF;
+}
+
+body {
+    background: rgb(86, 115, 139);
+    margin: 100px;
+}
+
+.img_part::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(359deg, rgba(42, 123, 155, 0.82) 8%, rgba(87, 199, 133, 0.09) 63%, rgba(237, 221, 83, 0) 92%);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+
+ul li a {
+    color: black;
+    font-size: 20px;
+
+}
+
+ul {
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    top: 100%;
+
+    left: 50%;
+
+}
+
+.img_part {
+    position: relative;
+    overflow: hidden;
+}
+
+.img_part:hover::after {
+    top: 0;
+}
+
 /* ===================== common css part  end ======================== */
 /* ===================== common css part start ======================== */
 /* ===================== common css part  end ======================== */
